  need to request it explicitly, e.g. `wx-config --libs std,webview`.

- wxMSW now requires linking with uxtheme.lib, shlwapi.lib and version.lib.
  This is done automatically in most cases, but if you use a static build of
  the library with a non-MSVC compiler such as MinGW and do not use wx-config,
  then you will need to add these libraries to your make or project files
  yourself.

- WXWIN_OS_DESCRIPTION doesn't exist any longer, use wxGetOsDescription().

- Never documented and not always available private wxGetClipboardData()
  function now doesn't exist at all any more in wxMSW, use wxClipboard instead.

- wxGraphicsRenderer::CreatePen() now takes wxGraphicsPenInfo and not a wxPen.
  This only affects code defining its own custom renderers, code just using
  wxGraphicsContext::CreatePen() continues to compile and work as before.

- wx/treebook.h doesn't include wx/treectrl.h (and, via it, wx/textctrl.h) any
  more, include these headers explicitly from your code if necessary.

- wxHtmlDCRenderer::Render() arguments have changed, simply omit the ones not
  existing in the function signature any more to update the code using it.

- wxHtmlCell::AdjustPagebreak() has lost its "known_pagebreaks" argument,
  update your code if you override this method (you shouldn't be calling it).

- wxListCtrl::SetItem() overload taking the column index now returns bool and
  not long. Its return value hasn't changed, however, and is still always
  either true or false, so normally the existing code should continue to work.

- configure only accepts the options it knows about now and doesn't silently
  ignore all the rest. If you get errors about unknown options, you may either
  specify --disable-option-checking argument to continue accepting them (which
  only ever makes sense if you pass these options to sub-configure scripts) or,
  e.g. if the error is due to spelling an option name wrongly, fixing or
  removing its name.
